src/main/minigo/parser/.antlr/MiniGoParser.py
# Generated from d:/PPL/BTL1/initial/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'func'", "'type'", "'struct'", 
                     "'interface'", "'const'", "'.'", "':'", "'if'", "'else'", 
                     "'for'", "'range'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "':='", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "','", "';'", "<INVALID>", "<INVALID>", 
                     "'nil'", "'return'", "'continue'", "'break'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "OP_COMPARE", "OP_ASSIGN", "OP_LOGIC", 
                      "OP_ARITH", "OP_EQUAL", "OP_ASSEQ", "PAREN_OPEN", 
                      "PAREN_CLOSE", "BRACE_OPEN", "BRACE_CLOSE", "BRACK_OPEN", 
                      "BRACK_CLOSE", "SEPARATOR_COMMA", "SEPARATOR_SEMI", 
                      "TYPE", "BOOLLIT", "NILLIT", "RETURN", "CONTINUE", 
                      "BREAK", "KEYWORD", "FLOATLIT", "INTLIT", "STRLIT", 
                      "ID", "DECIMAL_LITERAL", "BINARY_LITERAL", "OCTAL_LITERAL", 
                      "HEXADECIMAL_LITERAL", "NEWLINE", "WS", "MULTILINE_COMMENT", 
                      "COMMENT", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_vardecl = 2
    RULE_receiver = 3
    RULE_funcdecl = 4
    RULE_arraydecl = 5
    RULE_structdecl = 6
    RULE_fielddecl = 7
    RULE_typ = 8
    RULE_arraytype = 9
    RULE_basictype = 10
    RULE_interfacedecl = 11
    RULE_methoddecl = 12
    RULE_paramlist = 13
    RULE_param = 14
    RULE_constdecl = 15
    RULE_array_access = 16
    RULE_struct_access = 17
    RULE_multi_array_literal = 18
    RULE_array_literal = 19
    RULE_struct_literal = 20
    RULE_struct_field_list = 21
    RULE_struct_field = 22
    RULE_funccall = 23
    RULE_arglist = 24
    RULE_methodcall = 25
    RULE_stmt = 26
    RULE_assignstmt = 27
    RULE_ifstmt = 28
    RULE_elseifstmt = 29
    RULE_elsestmt = 30
    RULE_forstmt = 31
    RULE_forinit = 32
    RULE_forupdate = 33
    RULE_breakstmt = 34
    RULE_continuestmt = 35
    RULE_returnstmt = 36
    RULE_callstmt = 37
    RULE_block = 38
    RULE_expr = 39
    RULE_nl = 40

    ruleNames =  [ "program", "decl", "vardecl", "receiver", "funcdecl", 
                   "arraydecl", "structdecl", "fielddecl", "typ", "arraytype", 
                   "basictype", "interfacedecl", "methoddecl", "paramlist", 
                   "param", "constdecl", "array_access", "struct_access", 
                   "multi_array_literal", "array_literal", "struct_literal", 
                   "struct_field_list", "struct_field", "funccall", "arglist", 
                   "methodcall", "stmt", "assignstmt", "ifstmt", "elseifstmt", 
                   "elsestmt", "forstmt", "forinit", "forupdate", "breakstmt", 
                   "continuestmt", "returnstmt", "callstmt", "block", "expr", 
                   "nl" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    OP_COMPARE=13
    OP_ASSIGN=14
    OP_LOGIC=15
    OP_ARITH=16
    OP_EQUAL=17
    OP_ASSEQ=18
    PAREN_OPEN=19
    PAREN_CLOSE=20
    BRACE_OPEN=21
    BRACE_CLOSE=22
    BRACK_OPEN=23
    BRACK_CLOSE=24
    SEPARATOR_COMMA=25
    SEPARATOR_SEMI=26
    TYPE=27
    BOOLLIT=28
    NILLIT=29
    RETURN=30
    CONTINUE=31
    BREAK=32
    KEYWORD=33
    FLOATLIT=34
    INTLIT=35
    STRLIT=36
    ID=37
    DECIMAL_LITERAL=38
    BINARY_LITERAL=39
    OCTAL_LITERAL=40
    HEXADECIMAL_LITERAL=41
    NEWLINE=42
    WS=43
    MULTILINE_COMMENT=44
    COMMENT=45
    ERROR_CHAR=46
    UNCLOSE_STRING=47
    ILLEGAL_ESCAPE=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.DeclContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.DeclContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_program




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 144955148878) != 0):
                self.state = 82
                self.decl()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(MiniGoParser.StmtContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MiniGoParser.FuncdeclContext,0)


        def arraydecl(self):
            return self.getTypedRuleContext(MiniGoParser.ArraydeclContext,0)


        def structdecl(self):
            return self.getTypedRuleContext(MiniGoParser.StructdeclContext,0)


        def interfacedecl(self):
            return self.getTypedRuleContext(MiniGoParser.InterfacedeclContext,0)


        def constdecl(self):
            return self.getTypedRuleContext(MiniGoParser.ConstdeclContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.funcdecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.arraydecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.structdecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 94
                self.interfacedecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 95
                self.constdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def OP_EQUAL(self):
            return self.getToken(MiniGoParser.OP_EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def nl(self):
            return self.getTypedRuleContext(MiniGoParser.NlContext,0)


        def typ(self):
            return self.getTypedRuleContext(MiniGoParser.TypContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_vardecl




    def vardecl(self):

        localctx = MiniGoParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(MiniGoParser.T__0)
                self.state = 99
                self.match(MiniGoParser.ID)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 137581559808) != 0):
                    self.state = 100
                    self.typ()


                self.state = 103
                self.match(MiniGoParser.OP_EQUAL)
                self.state = 104
                self.expr(0)
                self.state = 105
                self.nl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(MiniGoParser.T__0)
                self.state = 108
                self.match(MiniGoParser.ID)
                self.state = 109
                self.typ()
                self.state = 110
                self.nl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReceiverContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAREN_OPEN(self):
            return self.getToken(MiniGoParser.PAREN_OPEN, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def typ(self):
            return self.getTypedRuleContext(MiniGoParser.TypContext,0)


        def PAREN_CLOSE(self):
            return self.getToken(MiniGoParser.PAREN_CLOSE, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_receiver




    def receiver(self):

        localctx = MiniGoParser.ReceiverContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_receiver)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(MiniGoParser.PAREN_OPEN)
            self.state = 115
            self.match(MiniGoParser.ID)
            self.state = 116
            self.typ()
            self.state = 117
            self.match(MiniGoParser.PAREN_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def PAREN_OPEN(self):
            return self.getToken(MiniGoParser.PAREN_OPEN, 0)

        def PAREN_CLOSE(self):
            return self.getToken(MiniGoParser.PAREN_CLOSE, 0)

        def BRACE_OPEN(self):
            return self.getToken(MiniGoParser.BRACE_OPEN, 0)

        def BRACE_CLOSE(self):
            return self.getToken(MiniGoParser.BRACE_CLOSE, 0)

        def nl(self):
            return self.getTypedRuleContext(MiniGoParser.NlContext,0)


        def receiver(self):
            return self.getTypedRuleContext(MiniGoParser.ReceiverContext,0)


        def paramlist(self):
            return self.getTypedRuleContext(MiniGoParser.ParamlistContext,0)


        def typ(self):
            return self.getTypedRuleContext(MiniGoParser.TypContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.StmtContext,i)


        def returnstmt(self):
            return self.getTypedRuleContext(MiniGoParser.ReturnstmtContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_funcdecl




    def funcdecl(self):

        localctx = MiniGoParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MiniGoParser.T__1)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 120
                self.receiver()


            self.state = 123
            self.match(MiniGoParser.ID)
            self.state = 124
            self.match(MiniGoParser.PAREN_OPEN)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 125
                self.paramlist()


            self.state = 128
            self.match(MiniGoParser.PAREN_CLOSE)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 137581559808) != 0):
                self.state = 129
                self.typ()


            self.state = 132
            self.match(MiniGoParser.BRACE_OPEN)
            self.state = 136
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 133
                    self.stmt() 
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 139
                self.returnstmt()


            self.state = 142
            self.match(MiniGoParser.BRACE_CLOSE)
            self.state = 143
            self.nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraydeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def typ(self):
            return self.getTypedRuleContext(MiniGoParser.TypContext,0)


        def nl(self):
            return self.getTypedRuleContext(MiniGoParser.NlContext,0)


        def BRACK_OPEN(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.BRACK_OPEN)
            else:
                return self.getToken(MiniGoParser.BRACK_OPEN, i)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.INTLIT)
            else:
                return self.getToken(MiniGoParser.INTLIT, i)

        def BRACK_CLOSE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.BRACK_CLOSE)
            else:
                return self.getToken(MiniGoParser.BRACK_CLOSE, i)

        def getRuleIndex(self):
            return MiniGoParser.RULE_arraydecl




    def arraydecl(self):

        localctx = MiniGoParser.ArraydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arraydecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(MiniGoParser.T__0)
            self.state = 146
            self.match(MiniGoParser.ID)
            self.state = 150 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 147
                    self.match(MiniGoParser.BRACK_OPEN)
                    self.state = 148
                    self.match(MiniGoParser.INTLIT)
                    self.state = 149
                    self.match(MiniGoParser.BRACK_CLOSE)

                else:
                    raise NoViableAltException(self)
                self.state = 152 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 154
            self.typ()
            self.state = 155
            self.nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def BRACE_OPEN(self):
            return self.getToken(MiniGoParser.BRACE_OPEN, 0)

        def BRACE_CLOSE(self):
            return self.getToken(MiniGoParser.BRACE_CLOSE, 0)

        def nl(self):
            return self.getTypedRuleContext(MiniGoParser.NlContext,0)


        def fielddecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.FielddeclContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.FielddeclContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_structdecl




    def structdecl(self):

        localctx = MiniGoParser.StructdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_structdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(MiniGoParser.T__2)
            self.state = 158
            self.match(MiniGoParser.ID)
            self.state = 159
            self.match(MiniGoParser.T__3)
            self.state = 160
            self.match(MiniGoParser.BRACE_OPEN)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 161
                self.fielddecl()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 167
            self.match(MiniGoParser.BRACE_CLOSE)
            self.state = 168
            self.nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FielddeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def typ(self):
            return self.getTypedRuleContext(MiniGoParser.TypContext,0)


        def SEPARATOR_SEMI(self):
            return self.getToken(MiniGoParser.SEPARATOR_SEMI, 0)

        def nl(self):
            return self.getTypedRuleContext(MiniGoParser.NlContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_fielddecl




    def fielddecl(self):

        localctx = MiniGoParser.FielddeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fielddecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(MiniGoParser.ID)
            self.state = 171
            self.typ()
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 173
                self.match(MiniGoParser.SEPARATOR_SEMI)
                pass

            elif la_ == 2:
                self.state = 174
                self.nl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arraytype(self):
            return self.getTypedRuleContext(MiniGoParser.ArraytypeContext,0)


        def basictype(self):
            return self.getTypedRuleContext(MiniGoParser.BasictypeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_typ




    def typ(self):

        localctx = MiniGoParser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typ)
        try:
            self.state = 179
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.arraytype()
                pass
            elif token in [27, 37]:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.basictype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraytypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basictype(self):
            return self.getTypedRuleContext(MiniGoParser.BasictypeContext,0)


        def BRACK_OPEN(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.BRACK_OPEN)
            else:
                return self.getToken(MiniGoParser.BRACK_OPEN, i)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.INTLIT)
            else:
                return self.getToken(MiniGoParser.INTLIT, i)

        def BRACK_CLOSE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.BRACK_CLOSE)
            else:
                return self.getToken(MiniGoParser.BRACK_CLOSE, i)

        def getRuleIndex(self):
            return MiniGoParser.RULE_arraytype




    def arraytype(self):

        localctx = MiniGoParser.ArraytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arraytype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 181
                self.match(MiniGoParser.BRACK_OPEN)
                self.state = 182
                self.match(MiniGoParser.INTLIT)
                self.state = 183
                self.match(MiniGoParser.BRACK_CLOSE)
                self.state = 186 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==23):
                    break

            self.state = 188
            self.basictype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BasictypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(MiniGoParser.TYPE, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_basictype




    def basictype(self):

        localctx = MiniGoParser.BasictypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_basictype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            _la = self._input.LA(1)
            if not(_la==27 or _la==37):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfacedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def BRACE_OPEN(self):
            return self.getToken(MiniGoParser.BRACE_OPEN, 0)

        def BRACE_CLOSE(self):
            return self.getToken(MiniGoParser.BRACE_CLOSE, 0)

        def nl(self):
            return self.getTypedRuleContext(MiniGoParser.NlContext,0)


        def methoddecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.MethoddeclContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.MethoddeclContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_interfacedecl




    def interfacedecl(self):
